RESOLVED FIXED177773
NULL WeakPtr should not malloc!
https://bugs.webkit.org/show_bug.cgi?id=177773
Summary NULL WeakPtr should not malloc!
Geoffrey Garen
Reported 2017-10-02 13:42:54 PDT
NULL WeakPtr should not malloc!
Attachments
Patch (2.59 KB, patch)
2017-10-02 13:54 PDT, Geoffrey Garen
koivisto: review+
Geoffrey Garen
Comment 1 2017-10-02 13:54:22 PDT
Build Bot
Comment 2 2017-10-02 13:57:27 PDT
Attachment 322429 [details] did not pass style-queue: ERROR: Source/WTF/wtf/WeakPtr.h:70: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3 2017-10-02 14:17:17 PDT
Comment on attachment 322429 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=322429&action=review lol yes r=me > Source/WTF/wtf/WeakPtr.h:70 > + WeakPtr() { } > + WeakPtr(std::nullptr_t) { } > + WeakPtr(const WeakPtr& o) : m_ref(o.m_ref) { } Should also add WeakPtr(WeakPtr&&) = default at some point (and operator= too).
Geoffrey Garen
Comment 4 2017-10-02 15:21:14 PDT
Radar WebKit Bug Importer
Comment 5 2017-10-02 15:21:48 PDT
Note You need to log in before you can comment on or make changes to this bug.